[package]
name = "test_workspace"
version = "0.1.0"
authors = ["Sarthak Singh <ss269@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
#   "bevy/bevy_gilrs",
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
#   "bevy/hdr",
]

native = [
  "bevy/bevy_wgpu",
  "bevy/x11",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_webgl2 = { version = "0.5", optional = true }


